--- a/1-wordle/wordle_header.html
+++ b/1-wordle/wordle_header.html
@@ -3,14 +3,11 @@
 
     <!--MENU-->
     <div class="row p-3 justify-content-center text-center">
-        <div class="col-1">
-            <a class="buttonMenu" href="https:\\www.atosmidia.online"><h4 class="h6">Home</h4></a>
+        <div class="col-2">
+            <a class="buttonMenu" href="..\"><h4 class="h6">Home</h4></a>
         </div>
-        <div class="col-1">
-            <a class="buttonMenu" href="index.php"><h4 class="h6">Game 1</h4></a>
-        </div>
-        <div class="col-1">
-            <a class="buttonMenu"><h4 class="h6">Dev</h4></a>
+        <div class="col-2">
+            <a class="buttonMenu" href="index.php"><h4 class="h6">Palavra do Dia</h4></a>
         </div>
     </div>
 </div>
