Nova Versão Estável - 2.0.0

--- a/1-wordle/wordle_body.html
+++ b/1-wordle/wordle_body.html
@@ -7,6 +7,6 @@
     
     <!-- SEND BUTTON -->
     <div id="div-submit" name="div-submit" class="div-submit col-1 p-2 m-2">
-        <input type="submit" value="Enviar" name="button-submit" class="button-submit" id="button-submit"></input>
+        <input type="submit" value="Enviar" name="button-submit" class="button-submit" id="button-submit" disabled></input>
     </div>
 </div>
