--- a/1-wordle/wordle_body.html
+++ b/1-wordle/wordle_body.html
@@ -5,7 +5,7 @@
     <div name="div-answer" id="div-answer" class="div-answer">
     </div>
     
-    <!-- SEND BUTTON -->
+    <!-- SEND BUTTON. -->
     <div id="div-submit" name="div-submit" class="div-submit col-1 p-2 m-2">
         <input type="submit" value="Enviar" name="button-submit" class="button-submit" id="button-submit" disabled></input>
     </div>
