--- a/body.html
+++ b/body.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
     <div class="row justify-content-center text-center" style="height:180px">
         <div class="col-3">
-            <h3>Hello World</h3>
+            <h3>Hello World.</h3>
         </div>
         <div class="col-3">
             <h3>Hello World</h3>
