--- a/1-wordle/wordle_body.html
+++ b/1-wordle/wordle_body.html
@@ -1,12 +1,17 @@
 <!-- GAME DIV -->
-<div class="game col-12 row justify-content-center text-center">
+<div class="game col-12 row justify-content-center text-center m-1">
 
     <!-- ANSWER DIV -->
     <div name="div-answer" id="div-answer" class="div-answer">
     </div>
     
     <!-- SEND BUTTON. -->
-    <div id="div-submit" name="div-submit" class="div-submit col-1 p-2 m-2">
-        <input type="submit" value="Enviar" name="button-submit" class="button-submit" id="button-submit" disabled></input>
+    <div name="div-buttons" class="row col-6 justify-content-center m-2">
+        <div id="div-bacskpace" name="div-bacskpace" class="div-bacskpace col-2">
+            <input type="submit" value="Apagar" name="button-backspace" class="button-backspace" id="button-backspace" enabled></input>
+        </div>
+        <div id="div-submit" name="div-submit" class="div-submit col-2">
+            <input type="submit" value="Enviar" name="button-submit" class="button-submit" id="button-submit" disabled></input>
+        </div>
     </div>
 </div>
